--- a/web/html/index.html
+++ b/web/html/index.html
@@ -34,11 +34,11 @@
                     <p>Xem nhóm</p>
                 </div>
             </div>
-            <!-- <div class="book">
-                <div class="book-content" id="check_user">
-                    <p>Xem các thành viên</p>
+            <div class="book">
+                <div class="book-content" id="chatbot">
+                    <p>Chatbot</p>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
     <div class="background_tranparents justify-content-center align-item-center">
