--- a/web/html/login.html
+++ b/web/html/login.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/component.css">
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/animation.css">
 </head>
 
 <body class="background_cluster">
@@ -40,9 +41,15 @@
                 <label>Password</label>
                 <input class="form-control" type="password" placeholder="Password" />
             </div>
-            <button type="button" class="btn">Login</button>
+            <button type="button" class="btn" onclick="goBack()">Login</button>
         </form>
     </div>
+    <div id="loading-location" class="loading-location">
+        <div class="loading-circle"></div>
+    </div>
+    <script type="text/javascript" src="/eel.js"></script>
+    <script src="../js/loading.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 
 </html>
