--- a/web/html/login.html
+++ b/web/html/login.html
@@ -32,22 +32,18 @@
           <label>Your name</label>
           <input class="form-control" type="text" placeholder="Your name" />
         </div>
-        <!-- <div class="form-group">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                <label class="form-check-label" for="inlineRadio1">Cum truong</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">Thanh vien</label>
-              </div>
-        </div> -->
         <div class="form-group">
           <label>Password</label>
           <input class="form-control" type="password" placeholder="Password" />
         </div>
-        <button type="button" class="btn">Login</button>
+        <button type="button" class="btn" id="btnLogin">Login</button>
       </form>
     </div>
   </body>
+  <script>
+    document.getElementById("btnLogin").addEventListener("click", function () {
+        window.location.href = "chooseTopics.html";
+    });
+</script>
+
 </html>
