--- a/web/html/login.html
+++ b/web/html/login.html
@@ -42,7 +42,7 @@
   </body>
   <script>
     document.getElementById("btnLogin").addEventListener("click", function () {
-        window.location.href = "chooseTopics.html";
+        window.location.href = "userRights.html";
     });
 </script>
 
