--- a/web/html/chooseTopics.html
+++ b/web/html/chooseTopics.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../css/component.css">
     <link rel="stylesheet" href="../css/animation.css">
     <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="background_cluster">
     <div class="form-container">
+        <div class="p-absolute back" id="btnback"></div>
         <h3 class="title">Hãy chọn Topic</h3>
         <div class="form-horizontal">
             <form class="form-group">
@@ -30,11 +32,19 @@
                     <input class="form-check-input" type="radio" id="education" name="system" value="education">
                     <label for="education">Hệ thống đào tạo thông minh cho sinh viên</label>
                 </div>
-                <button class="btn" id="btnTopics">Chọn</button>
+                <div class="btn" id="btnTopics">Chọn</div>
             </form>            
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/loading.js"></script>
+    <script>
+        document.getElementById("btnback").addEventListener("click", function () {
+        window.location.href = "userRights.html";
+    });
+
+    document.getElementById("btnTopics").addEventListener("click", function () {
+        window.location.href = "groupUser.html";
+    });
+    </script>
 </body>
 </html>
