--- a/web/html/chooseTopics.html
+++ b/web/html/chooseTopics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topics for you</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="../img/home.png">
     <link rel="stylesheet" href="../css/component.css">
     <link rel="stylesheet" href="../css/animation.css">
     <link rel="stylesheet" href="../css/style2.css">
@@ -31,7 +32,7 @@
                     <label for="education">Hệ thống đào tạo thông minh cho sinh viên</label>
                 </div>
                 <button class="btn" id="btnTopics">Chọn</button>
-            </form>            
+            </form>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
