--- a/web/html/index.html
+++ b/web/html/index.html
@@ -25,6 +25,11 @@
         </div>
         <div class="menu">
             <div class="book">
+                <div class="book-content" id="topic">
+                    <p>Chọn topic</p>
+                </div>
+            </div>
+            <div class="book">
                 <div class="book-content" id="make_group">
                     <p>Phân nhóm</p>
                 </div>
