--- a/web/html/chooseTopics.html
+++ b/web/html/chooseTopics.html
@@ -37,15 +37,7 @@
             </form>
         </div>
     </div>
+    <script type="text/javascript" src="/eel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        document.getElementById("btnback").addEventListener("click", function () {
-        window.location.href = "userRights.html";
-    });
-
-    document.getElementById("btnTopics").addEventListener("click", function () {
-        window.location.href = "groupUser.html";
-    });
-    </script>
 </body>
 </html>
