--- a/web/html/group.html
+++ b/web/html/group.html
@@ -18,6 +18,7 @@
     <div class="d-flex justify-content-center w-100 h-100 wrapper flex-row">
         <div class="d-flex justify-content-space_around flex-column align-item-center w-100">
             <div class="p-absolute back"></div>
+            <div class="p-absolute logout"></div>
             <div class="group-name" id="group-name">
                 <div class="group-img">
                     <h4 id="gr-name">All</h4>
