--- a/web/html/chooseTopics.html
+++ b/web/html/chooseTopics.html
@@ -37,7 +37,14 @@
             </form>
         </div>
     </div>
+    <div id="loading-location" class="loading-location">
+        <div class="loading-circle"></div>
+    </div>
     <script type="text/javascript" src="/eel.js"></script>
+    <script src="../js/loading.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/topic.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
