--- a/web/html/index.html
+++ b/web/html/index.html
@@ -29,7 +29,7 @@
                     <p>Chọn topic</p>
                 </div>
             </div>
-            <div class="book">
+            <div class="book hide">
                 <div class="book-content" id="make_group">
                     <p>Phân nhóm</p>
                 </div>
@@ -59,6 +59,8 @@
         <div class="loading-circle"></div>
     </div>
     <script type="text/javascript" src="/eel.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../js/app.js"></script>
 </body>
 
