--- a/web/html/load.html
+++ b/web/html/load.html
@@ -46,6 +46,8 @@
     </div>
     <script type="text/javascript" src="/eel.js"></script>
     <!-- <script src="../js/app.js"></script> -->
+    <script src="../js/script.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../js/waiting.js"></script>
 </body>
 
