--- a/web/html/user.html
+++ b/web/html/user.html
@@ -91,6 +91,8 @@
     </div>
     <script type="text/javascript" src="/eel.js"></script>
     <!-- <script src="../js/app.js"></script> -->
+    <script src="../js/script.js"></script>
+    <script src="../js/login.js"></script>
     <script type="module" src="../js/user.js"></script>
 </body>
 
