done group for user normal

--- a/web/html/user.html
+++ b/web/html/user.html
@@ -36,10 +36,15 @@
                         <div class="running-man">
                             <img class="trainner" src="../img/trainner.png">
                         </div>
-                        <div class="d-flex flex-column justify-content-space_around">
-                            <div>Họ và tên: <span id="name" class="inforText"></span>
+                        <div class="d-flex flex-column justify-content-space_around w-75">
+                            <div class="d-flex justify-content-space_between">
+                                <div>Họ và tên: <span id="name" class="inforText"></span></div>
+                                <div>Nhóm gợi ý: <span id="suggest" class="inforText"></span></div>
                             </div>
-                            <div>Nhóm: <span id="group" class="inforText"></span></div>
+                            <div class="d-flex justify-content-space_between">
+                                <div>Nhóm: <span id="group" class="inforText"></span></div>
+                                <div>Topic: <span id="topic" class="inforText"></span></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -74,7 +79,7 @@
                             <p>Sở trường : <span class="inforText" id="best-skill"></span> </p>
                         </div>
                     </div>
-                </div> 
+                </div>
             </div>
             <div class="certificate d-flex justify-content-end align-item-center">
                 <div class="d-flex flex-column align-item-center">
