--- a/web/html/group.html
+++ b/web/html/group.html
@@ -34,16 +34,20 @@
                     </div>
                     <ul>
                         <li id="all" class="nav-item active">All</li>
-                        <li id="1" class="nav-item">Nhóm 1</li>
-                        <li id="2" class="nav-item">Nhóm 2</li>
-                        <li id="3" class="nav-item">Nhóm 3</li>
-                        <li id="4" class="nav-item">Nhóm 4</li>
                         <li id="infor" class="nav-item hide">Infor</li>
+                        <li id="1" class="nav-item hide">Nhóm 1</li>
+                        <li id="2" class="nav-item hide">Nhóm 2</li>
+                        <li id="3" class="nav-item hide">Nhóm 3</li>
+                        <li id="4" class="nav-item hide">Nhóm 4</li>
+                        <li id="history" class="nav-item hide">Lịch sử</li>
                     </ul>
                 </nav>
             </div>
-            <div class="group"></div>
+            <div class="group">
+                
+            </div>
         </div>
+    </div>
     </div>
     <div class="background_tranparents justify-content-center align-item-center">
         <div class="dialog d-flex justify-content-space_around align-content-center flex-column w-100">
