--- a/web/html/login.html
+++ b/web/html/login.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" href="../img/home.png">
+    <link rel="stylesheet" href="../css/style.css" >
     <link rel="stylesheet" href="../css/component.css">
     <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="../css/animation.css">
@@ -38,6 +39,14 @@
     </div>
     <div id="loading-location" class="loading-location">
         <div class="loading-circle"></div>
+    </div>
+    <div id="toast" class="toast justify-content-center align-item-center">
+        <div class="pet-toast">
+            <img src="../img/toast.png">
+        </div>
+        <div class="chatbox">
+        </div>
+    </div>
     </div>
     <script type="text/javascript" src="/eel.js"></script>
     <script src="../js/loading.js"></script>
