--- a/web/BOTOPENAI1/html/index.html
+++ b/web/BOTOPENAI1/html/index.html
@@ -13,6 +13,21 @@
             <!-- Biểu đồ KMeans sẽ được hiển thị ở đây -->
             <canvas id="kmeans-chart"></canvas>
         </div>
+        <div class="topic-buttons">
+            <label>HÃY CHỌN TOPIC</label>
+            <button class="topic-button">
+                <i class="fas fa-leaf"></i> Topic 1: Hệ thống kinh doanh thông minh cho nông nghiệp
+            </button>
+            <button class="topic-button">
+                <i class="fas fa-piggy-bank"></i> Topic 2: Hệ thống quản lý tài chính thông minh cho cá nhân
+            </button>
+            <button class="topic-button">
+                <i class="fas fa-building"></i> Topic 3: Hệ thống tìm kiếm mặt bằng cho thuê thông minh
+            </button>
+            <button class="topic-button">
+                <i class="fas fa-graduation-cap"></i> Topic 4: Hệ thống đào tạo thông minh cho sinh viên
+            </button>
+        </div>
         <div class="chat-container" id="chat-container">
             <div class="chat-history" id="chat-history"></div>
             <div class="input-container">
@@ -21,6 +36,7 @@
             </div>
         </div>
     </div>
+
     <div class="p-absolute back"></div>
     <div id="loading-location" class="loading-location">
         <div class="loading-circle"></div>
