--- a/web/html/group.html
+++ b/web/html/group.html
@@ -44,10 +44,12 @@
                 </nav>
             </div>
             <div class="group">
-                
+
             </div>
         </div>
     </div>
+    <div class="delete-group ps-absolute hide" id="deletebtn">
+        <button class="delete-btn" id="delete-btn">Xóa toàn bộ nhóm và thành viên?</button>
     </div>
     <div class="background_tranparents justify-content-center align-item-center">
         <div class="dialog d-flex justify-content-space_around align-content-center flex-column w-100">
