--- a/web/BOTOPENAI1/html/index.html
+++ b/web/BOTOPENAI1/html/index.html
@@ -5,6 +5,7 @@
     <title>Chatbot Cụm 1</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../../css/animation.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -31,8 +32,8 @@
         <div class="chat-container" id="chat-container">
             <div class="chat-history" id="chat-history"></div>
             <div class="input-container">
-                <input type="text" id="user-input" placeholder="Nhập điểm MIS, BigData, Sở trường...">
-                <button class="send-button" onclick="sendMessage()">Gửi</button>
+                <input type="text" id="user-input" placeholder="Nhap diem, So truong...">
+                <button class="send-button"><i class="fas fa-paper-plane" onclick="sendMessage()"></i></button>
             </div>
         </div>
     </div>
